[package]
name = "user_management"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-web-validator = "5.0.1"
chrono = "0.4.23"
diesel = { version = "2.0.0", features = ["postgres"] }
diesel-async = { version = "0.2.0", features = ["postgres", "deadpool"] }
diesel_migrations = "2.0.0"
dotenvy = "0.15"
futures = "0.3.25"
log = "0.4.0"
env_logger = "0.9.0"
serde = { version = "1.0.151", features = ["derive"] }
serde_json = "1.0.91"
validator = { version = "0.16", features = ["derive"] }

[dev-dependencies]
actix-test = "0.1.0"
actix-rt = "2.7.0"
ctor = "0.1.26"
assert-json-diff = "2.0.2"
testcontainers = "0.14.0"
once_cell = "1.17.0"
